[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "balatro-gym"
version = "1.5.0"
description = "A library for balatro"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Nathanael Lu", email = "info@lunathanael.dev" },
]
maintainers = [
    { name = "Nathanael Lu", email = "info@lunathanael.dev" },
]
dependencies = [
    "gymnasium>=1.0.0,<2.0.0",
    "nanobind>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2,<6.0.0",
    "build>=1.2.1,<2.0.0",
    "packaging>=24.1,<25.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

wheel.packages = ["src/balatro_gym"]
wheel.install-dir = "balatro_gym"
